<resources>
    <string name="app_name">ChatBox</string>
    <string name="login_google">Iniciar Sesión con Google</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_logoff">Cerrar Sesión</string>

    <string name="logoff_label"> Estás seguro de cerrar sesión?</string>

    <string name="cambiar_estado_label">Cambiar Estado</string>
    <string name="placeholder_estado">Hey estoy usando Chatbox</string>
    <string name="btn_cambiar">Cambiar</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="clientIDFirebase">753519469372-mjqo0fcs7142r1lu3h9nk3s4sh4h10n2.apps.googleusercontent.com</string>
</resources>