<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contactos" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logoff" />
    </group>
</menu>