<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.wolfiex.chatbox.ui.chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.wolfiex.chatbox.ui.contactos.ContactosFragment"
        android:label="@string/menu_contactos"
        tools:layout="@layout/fragment_contactos" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.wolfiex.chatbox.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes" />
    <fragment
        android:id="@+id/nav_logoff"
        android:name="com.wolfiex.chatbox.ui.logoff.LogoffFragment"
        android:label="@string/menu_logoff"
        tools:layout="@layout/fragment_logoff" />
</navigation>